--- a/Covid Data Analysis (Preprocess).ipynb
+++ b/Covid Data Analysis (Preprocess).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "    out = f'{folder_name}/processed.csv'\n",
     "    df.to_csv(out, index=False)\n",
     "\n",
-    "# save_to_csv(combined_df)"
+    "save_to_csv(combined_df)"
    ]
   },
   {
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def drop_col(df):\n",
     "    col_to_drop = [\n",
     "        'Patient Number', 'Entry_ID', 'State Patient Number', \n",
-    "        'Estimated Onset Date', 'Detected City', 'Detected District',\n",
+    "        'Estimated Onset Date', 'Detected City', \n",
     "        'State code', 'Notes', 'Contracted from which Patient (Suspected)',\n",
     "        'Nationality', 'Type of transmission', 'Source_1', 'Source_2',\n",
     "        'Source_3', 'Backup Notes'\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
     "    path = f'Output/{name}.csv'\n",
     "    df.to_csv(path, index=False)\n",
     "    \n",
-    "# save_to_csv_new(filtered_df, 'dataset_filtered')"
+    "save_to_csv_new(filtered_df, 'dataset_filtered')"
    ]
   },
   {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +280,7 @@
        "      <th>Date Announced</th>\n",
        "      <th>Age Bracket</th>\n",
        "      <th>Gender</th>\n",
+       "      <th>Detected District</th>\n",
        "      <th>Detected State</th>\n",
        "      <th>Current Status</th>\n",
        "      <th>Status Change Date</th>\n",
@@ -295,6 +296,7 @@
        "      <td>02/02/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Alappuzha</td>\n",
        "      <td>Kerala</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>14/02/2020</td>\n",
@@ -308,6 +310,7 @@
        "      <td>03/02/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Kasaragod</td>\n",
        "      <td>Kerala</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>14/02/2020</td>\n",
@@ -321,6 +324,7 @@
        "      <td>02/03/2020</td>\n",
        "      <td>45</td>\n",
        "      <td>M</td>\n",
+       "      <td>East Delhi</td>\n",
        "      <td>Delhi</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>15/03/2020</td>\n",
@@ -334,6 +338,7 @@
        "      <td>02/03/2020</td>\n",
        "      <td>24</td>\n",
        "      <td>M</td>\n",
+       "      <td>Hyderabad</td>\n",
        "      <td>Telangana</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>02/03/2020</td>\n",
@@ -347,6 +352,7 @@
        "      <td>04/03/2020</td>\n",
        "      <td>55</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Italians</td>\n",
        "      <td>Haryana</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>29/03/2020</td>\n",
@@ -354,6 +360,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -377,6 +384,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>647225</th>\n",
@@ -384,6 +392,7 @@
        "      <td>476</td>\n",
        "      <td>None</td>\n",
        "      <td>20/06/2021</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -403,6 +412,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>647227</th>\n",
@@ -410,6 +420,7 @@
        "      <td>476</td>\n",
        "      <td>None</td>\n",
        "      <td>20/06/2021</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -429,10 +440,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>233072 rows × 10 columns</p>\n",
+       "<p>233072 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -449,20 +461,33 @@
        "647227     647228    476          None     20/06/2021         NaN    NaN   \n",
        "647228     647229    476          None     20/06/2021         NaN    NaN   \n",
        "\n",
-       "       Detected State Current Status Status Change Date Num Cases  \n",
-       "0              Kerala      Recovered         14/02/2020         1  \n",
-       "1              Kerala      Recovered         14/02/2020         1  \n",
-       "2               Delhi      Recovered         15/03/2020         1  \n",
-       "3           Telangana      Recovered         02/03/2020         1  \n",
-       "4             Haryana      Recovered         29/03/2020         1  \n",
-       "...               ...            ...                ...       ...  \n",
-       "647224            NaN            NaN                NaN       NaN  \n",
-       "647225            NaN            NaN                NaN       NaN  \n",
-       "647226            NaN            NaN                NaN       NaN  \n",
-       "647227            NaN            NaN                NaN       NaN  \n",
-       "647228            NaN            NaN                NaN       NaN  \n",
+       "       Detected District Detected State Current Status Status Change Date  \\\n",
+       "0              Alappuzha         Kerala      Recovered         14/02/2020   \n",
+       "1              Kasaragod         Kerala      Recovered         14/02/2020   \n",
+       "2             East Delhi          Delhi      Recovered         15/03/2020   \n",
+       "3              Hyderabad      Telangana      Recovered         02/03/2020   \n",
+       "4               Italians        Haryana      Recovered         29/03/2020   \n",
+       "...                  ...            ...            ...                ...   \n",
+       "647224               NaN            NaN            NaN                NaN   \n",
+       "647225               NaN            NaN            NaN                NaN   \n",
+       "647226               NaN            NaN            NaN                NaN   \n",
+       "647227               NaN            NaN            NaN                NaN   \n",
+       "647228               NaN            NaN            NaN                NaN   \n",
        "\n",
-       "[233072 rows x 10 columns]"
+       "       Num Cases  \n",
+       "0              1  \n",
+       "1              1  \n",
+       "2              1  \n",
+       "3              1  \n",
+       "4              1  \n",
+       "...          ...  \n",
+       "647224       NaN  \n",
+       "647225       NaN  \n",
+       "647226       NaN  \n",
+       "647227       NaN  \n",
+       "647228       NaN  \n",
+       "\n",
+       "[233072 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -495,6 +520,7 @@
        "      <th>Date Announced</th>\n",
        "      <th>Age Bracket</th>\n",
        "      <th>Gender</th>\n",
+       "      <th>Detected District</th>\n",
        "      <th>Detected State</th>\n",
        "      <th>Current Status</th>\n",
        "      <th>Status Change Date</th>\n",
@@ -510,6 +536,7 @@
        "      <td>14/04/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>S.P.S. Nellore</td>\n",
        "      <td>Andhra Pradesh</td>\n",
        "      <td>Hospitalized</td>\n",
        "      <td>NaN</td>\n",
@@ -521,6 +548,7 @@
        "      <td>48</td>\n",
        "      <td>NaN</td>\n",
        "      <td>18/04/2020</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Madhya Pradesh</td>\n",
@@ -536,6 +564,7 @@
        "      <td>18/04/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Alirajpur</td>\n",
        "      <td>Madhya Pradesh</td>\n",
        "      <td>Hospitalized</td>\n",
        "      <td>NaN</td>\n",
@@ -547,6 +576,7 @@
        "      <td>48</td>\n",
        "      <td>NaN</td>\n",
        "      <td>18/04/2020</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Madhya Pradesh</td>\n",
@@ -562,6 +592,7 @@
        "      <td>19/04/2020</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Gurdaspur</td>\n",
        "      <td>Punjab</td>\n",
        "      <td>Hospitalized</td>\n",
        "      <td>NaN</td>\n",
@@ -569,6 +600,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -588,6 +620,7 @@
        "      <td>19/06/2021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Kasaragod</td>\n",
        "      <td>Kerala</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>NaN</td>\n",
@@ -601,6 +634,7 @@
        "      <td>19/06/2021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Leh</td>\n",
        "      <td>Ladakh</td>\n",
        "      <td>Hospitalized</td>\n",
        "      <td>NaN</td>\n",
@@ -614,6 +648,7 @@
        "      <td>19/06/2021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Kargil</td>\n",
        "      <td>Ladakh</td>\n",
        "      <td>Hospitalized</td>\n",
        "      <td>NaN</td>\n",
@@ -627,6 +662,7 @@
        "      <td>19/06/2021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Leh</td>\n",
        "      <td>Ladakh</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>NaN</td>\n",
@@ -640,6 +676,7 @@
        "      <td>19/06/2021</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Kargil</td>\n",
        "      <td>Ladakh</td>\n",
        "      <td>Recovered</td>\n",
        "      <td>NaN</td>\n",
@@ -647,7 +684,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>414157 rows × 10 columns</p>\n",
+       "<p>414157 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -664,20 +701,33 @@
        "646906     646907    475          None     19/06/2021         NaN    NaN   \n",
        "646907     646908    475          None     19/06/2021         NaN    NaN   \n",
        "\n",
-       "        Detected State Current Status Status Change Date Num Cases  \n",
-       "15830   Andhra Pradesh   Hospitalized                NaN        -1  \n",
-       "15833   Madhya Pradesh   Hospitalized                NaN        -1  \n",
-       "15834   Madhya Pradesh   Hospitalized                NaN         2  \n",
-       "15835   Madhya Pradesh   Hospitalized                NaN        -2  \n",
-       "15836           Punjab   Hospitalized                NaN        -1  \n",
-       "...                ...            ...                ...       ...  \n",
-       "646787          Kerala      Recovered                NaN     533.0  \n",
-       "646904          Ladakh   Hospitalized                NaN      51.0  \n",
-       "646905          Ladakh   Hospitalized                NaN       2.0  \n",
-       "646906          Ladakh      Recovered                NaN      98.0  \n",
-       "646907          Ladakh      Recovered                NaN      15.0  \n",
+       "       Detected District  Detected State Current Status Status Change Date  \\\n",
+       "15830     S.P.S. Nellore  Andhra Pradesh   Hospitalized                NaN   \n",
+       "15833                NaN  Madhya Pradesh   Hospitalized                NaN   \n",
+       "15834          Alirajpur  Madhya Pradesh   Hospitalized                NaN   \n",
+       "15835                NaN  Madhya Pradesh   Hospitalized                NaN   \n",
+       "15836          Gurdaspur          Punjab   Hospitalized                NaN   \n",
+       "...                  ...             ...            ...                ...   \n",
+       "646787         Kasaragod          Kerala      Recovered                NaN   \n",
+       "646904               Leh          Ladakh   Hospitalized                NaN   \n",
+       "646905            Kargil          Ladakh   Hospitalized                NaN   \n",
+       "646906               Leh          Ladakh      Recovered                NaN   \n",
+       "646907            Kargil          Ladakh      Recovered                NaN   \n",
        "\n",
-       "[414157 rows x 10 columns]"
+       "       Num Cases  \n",
+       "15830         -1  \n",
+       "15833         -1  \n",
+       "15834          2  \n",
+       "15835         -2  \n",
+       "15836         -1  \n",
+       "...          ...  \n",
+       "646787     533.0  \n",
+       "646904      51.0  \n",
+       "646905       2.0  \n",
+       "646906      98.0  \n",
+       "646907      15.0  \n",
+       "\n",
+       "[414157 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -690,8 +740,8 @@
     "    district_record = df[(df['Num Cases'] != 1) & (df['Num Cases'].notnull())]# != np.nan)]\n",
     "    display(individual_record)\n",
     "    display(district_record)\n",
-    "#     save_to_csv_new(individual_record, 'individual record')\n",
-    "#     save_to_csv_new(district_record, 'district record')\n",
+    "    save_to_csv_new(individual_record, 'individual record')\n",
+    "    save_to_csv_new(district_record, 'district record')\n",
     "\n",
     "split_dataset(filtered_df)"
    ]
