--- a/Covid Data Analysis (Preprocess).ipynb
+++ b/Covid Data Analysis (Preprocess).ipynb
@@ -33,7 +33,9 @@
    "source": [
     "### About the dataset\n",
     "\n",
-    "* Date format: DD/MM/YYYY"
+    "* Date format: DD/MM/YYYY\n",
+    "* Starting day of report: 30 January 2020\n",
+    "* Last day of report: 20 June 2021"
    ]
   },
   {
