--- a/Covid Data Analysis Part-2.ipynb
+++ b/Covid Data Analysis Part-2.ipynb
@@ -74,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of covid cases and fatalities reported by each state"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
@@ -277,6 +284,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting covid cases and fatalities graph for different state"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -411,13 +425,6 @@
    "source": [
     "plot_gender_distribution('Kerala')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
