--- a/Covid Data Analysis Part-1.ipynb
+++ b/Covid Data Analysis Part-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Examining the covid cases on the basis of their geographical location in Indian Subcontinent"
+    "### Examining the covid cases on the basis of their geographical location in India"
    ]
   },
   {
